# EcoNote

./: CMakeLists.txt
src/: CryptoNoteConfig.h
src/CryptoNoteCore/: CryptoNoteBasic.h  Miner.cpp
